fix: font-size, line-spacing

--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@
 
 html {
   min-height: 100vh;
+  font-size: 15px;
 }
 
 h1, h2, h3, .josefin {
@@ -54,5 +55,5 @@ body {
 
 h1 {
   font-size: 3.2em;
-  line-height: 1.1;
+  line-height: 1;
 }
